[gd_scene load_steps=36 format=2]

[ext_resource path="res://scenes/Dungeon/Dungeon.gd" type="Script" id=1]
[ext_resource path="res://scenes/Dungeon/MapGenerator.gd" type="Script" id=2]
[ext_resource path="res://tileset/test/Wall.tres" type="CubeMesh" id=3]
[ext_resource path="res://scenes/Dungeon/MultipleTile.gd" type="Script" id=4]
[ext_resource path="res://models/Dungeon/Pipes/PipeLiana00.mesh" type="ArrayMesh" id=5]
[ext_resource path="res://models/Dungeon/Pipes/PipeLiana01.mesh" type="ArrayMesh" id=6]
[ext_resource path="res://models/Dungeon/Pipes/PipeStraight00.mesh" type="ArrayMesh" id=7]
[ext_resource path="res://models/Dungeon/Pipes/PipeStraight01.mesh" type="ArrayMesh" id=8]
[ext_resource path="res://models/Dungeon/Pipes/PipeTurn00.mesh" type="ArrayMesh" id=9]
[ext_resource path="res://models/Dungeon/Pipes/PipeTurn01.mesh" type="ArrayMesh" id=10]
[ext_resource path="res://tileset/test/Start.tres" type="SphereMesh" id=11]
[ext_resource path="res://tileset/test/End.tres" type="SphereMesh" id=12]
[ext_resource path="res://tileset/test/DoorInsertion.tres" type="SphereMesh" id=13]
[ext_resource path="res://tileset/test/Key.tres" type="PrismMesh" id=14]
[ext_resource path="res://tileset/test/LeftLadder.tres" type="CubeMesh" id=15]
[ext_resource path="res://tileset/test/RightLadder.tres" type="CubeMesh" id=16]
[ext_resource path="res://music/exploring_the_dungeon2.ogg" type="AudioStream" id=17]
[ext_resource path="res://scenes/Dungeon/Map.gd" type="Script" id=18]
[ext_resource path="res://scenes/Dungeon/MiniMap.gd" type="Script" id=19]

[sub_resource type="ProceduralSky" id=15]
radiance_size = 0
sky_top_color = Color( 0.937255, 0.619608, 0.0784314, 1 )
sky_horizon_color = Color( 0.976471, 0.917647, 0.592157, 1 )
texture_size = 0

[sub_resource type="Environment" id=1]
background_mode = 2
background_sky = SubResource( 15 )
background_color = Color( 0.52549, 0.52549, 0.52549, 1 )
ambient_light_color = Color( 0.462745, 0.462745, 0.462745, 1 )
ambient_light_sky_contribution = 0.0
ssao_enabled = true
dof_blur_far_enabled = true
dof_blur_far_distance = 35.0
dof_blur_far_transition = 10.0

[sub_resource type="BakedLightmapData" id=16]
bounds = AABB( -234.646, -173.816, -70.1102, 469.292, 347.633, 140.22 )
cell_space_transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 938.583, 695.265, 280.441 )
cell_subdiv = 12
octree = PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255 )

[sub_resource type="MultiMesh" id=2]
mesh = ExtResource( 3 )

[sub_resource type="MultiMesh" id=3]
transform_format = 1
mesh = ExtResource( 5 )

[sub_resource type="MultiMesh" id=4]
transform_format = 1
mesh = ExtResource( 6 )

[sub_resource type="MultiMesh" id=5]
transform_format = 1
mesh = ExtResource( 7 )

[sub_resource type="MultiMesh" id=6]
transform_format = 1
mesh = ExtResource( 8 )

[sub_resource type="MultiMesh" id=7]
transform_format = 1
mesh = ExtResource( 9 )

[sub_resource type="MultiMesh" id=8]
transform_format = 1
mesh = ExtResource( 10 )

[sub_resource type="MultiMesh" id=9]
transform_format = 1
mesh = ExtResource( 11 )

[sub_resource type="MultiMesh" id=10]
transform_format = 1
mesh = ExtResource( 12 )

[sub_resource type="MultiMesh" id=11]
transform_format = 1
mesh = ExtResource( 13 )

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 0, 1, 0, 1 )

[sub_resource type="CubeMesh" id=13]
material = SubResource( 12 )

[sub_resource type="MeshLibrary" id=14]
item/0/name = ""
item/0/mesh = SubResource( 13 )
item/0/shapes = [  ]
item/1/name = ""
item/1/mesh = ExtResource( 3 )
item/1/shapes = [  ]
item/2/name = ""
item/2/mesh = ExtResource( 14 )
item/2/shapes = [  ]
item/3/name = ""
item/3/mesh = ExtResource( 11 )
item/3/shapes = [  ]
item/4/name = ""
item/4/mesh = ExtResource( 12 )
item/4/shapes = [  ]
item/5/name = ""
item/5/mesh = ExtResource( 13 )
item/5/shapes = [  ]
item/6/name = ""
item/6/mesh = ExtResource( 15 )
item/6/shapes = [  ]
item/7/name = ""
item/7/mesh = ExtResource( 16 )
item/7/shapes = [  ]

[node name="Dungeon" type="Spatial"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="BakedLightmap" type="BakedLightmap" parent="."]
bake_hdr = true
bake_extents = Vector3( 234.646, 173.816, 70.1102 )
light_data = SubResource( 16 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.595468, 0.34022, -0.727784, 0, 0.905903, 0.423486, 0.803379, -0.252172, 0.539436, 0, 0, 0 )
light_energy = 0.5
light_indirect_energy = 2.0

[node name="MapGenerator" type="Spatial" parent="."]
editor/display_folded = true
script = ExtResource( 2 )

[node name="Wall0" type="MultiMeshInstance" parent="MapGenerator" groups=[
"Tiles",
]]
multimesh = SubResource( 2 )
script = ExtResource( 4 )

[node name="Ladder0" type="MultiMeshInstance" parent="MapGenerator" groups=[
"Tiles",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )
multimesh = SubResource( 3 )
script = ExtResource( 4 )

[node name="Ladder1" type="MultiMeshInstance" parent="MapGenerator" groups=[
"Tiles",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )
multimesh = SubResource( 4 )
script = ExtResource( 4 )

[node name="PipeStraight0" type="MultiMeshInstance" parent="MapGenerator" groups=[
"Tiles",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )
multimesh = SubResource( 5 )
script = ExtResource( 4 )

[node name="PipeStraight1" type="MultiMeshInstance" parent="MapGenerator" groups=[
"Tiles",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )
multimesh = SubResource( 6 )
script = ExtResource( 4 )

[node name="PipeTurn0" type="MultiMeshInstance" parent="MapGenerator" groups=[
"Tiles",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )
multimesh = SubResource( 7 )
script = ExtResource( 4 )

[node name="PipeTurn1" type="MultiMeshInstance" parent="MapGenerator" groups=[
"Tiles",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )
multimesh = SubResource( 8 )
script = ExtResource( 4 )

[node name="Start0" type="MultiMeshInstance" parent="MapGenerator" groups=[
"Tiles",
]]
multimesh = SubResource( 9 )
script = ExtResource( 4 )

[node name="End0" type="MultiMeshInstance" parent="MapGenerator" groups=[
"Tiles",
]]
multimesh = SubResource( 10 )
script = ExtResource( 4 )

[node name="DoorInsertion0" type="MultiMeshInstance" parent="MapGenerator" groups=[
"Tiles",
]]
multimesh = SubResource( 11 )
script = ExtResource( 4 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = SubResource( 14 )
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
autoplay = true

[node name="Map" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
script = ExtResource( 18 )
map_generator = NodePath("../MapGenerator")

[node name="Viewport" type="Viewport" parent="Map"]
size = Vector2( 1024, 600 )
handle_input_locally = false
hdr = false
disable_3d = true
render_target_update_mode = 3
gui_disable_input = true

[node name="MiniMap" type="Node2D" parent="Map/Viewport"]
script = ExtResource( 19 )
[connection signal="dungeon_gen_finished" from="MapGenerator" to="." method="_on_MapGenerator_dungeon_gen_finished"]
[connection signal="request_new_dungeon" from="MapGenerator" to="." method="_on_MapGenerator_request_new_dungeon"]
